--- a/package.json
+++ b/package.json
@@ -5,13 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p $PORT",
+    "lint": "next lint",
+    "heroku-postbuild" : "npm run build"
+
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "mycutedemoclock": "^1.0.1",
     "next": "12.1.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-vertical-timeline-component": "^3.5.2",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "eslint": "8.14.0",
